// Copyright (c) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

package BuildXL.Xldb.Proto;

option csharp_namespace = "BuildXL.Xldb.Proto";

enum ReportedFileOperation{
    ReportedFileOperation_UNSPECIFIED = 0;
    
    Unknown = 1;
    CreateFile = 2;
    CreateProcess = 3;
    GetFileAttributes = 4;
    GetFileAttributesEx = 5;
    ReportedFileOperation_Process = 6;
    FindFirstFileEx = 7;
    FindNextFile = 8;
    CreateDirectory = 9;
    DeleteFile = 10;
    MoveFileSource = 11;
    MoveFileDestination = 12;
    SetFileInformationByHandleSource = 13;
    SetFileInformationByHandleDest = 14;
    ZwSetRenameInformationFileSource = 15;
    ZwSetRenameInformationFileDest = 16;
    ZwSetLinkInformationFile = 17;
    ZwSetDispositionInformationFile = 18;
    ZwSetModeInformationFile = 19;
    ZwSetFileNameInformationFileSource = 20;
    ZwSetFileNameInformationFileDest = 21;
    CopyFileSource = 22;
    CopyFileDestination = 23;
    CreateHardLinkSource = 24;
    CreateHardLinkDestination = 25;
    RemoveDirectory = 26;
    RemoveDirectorySource = 27;
    NtQueryDirectoryFile = 28;
    ZwQueryDirectoryFile = 29;
    NtCreateFile = 30;
    ZwCreateFile = 31;
    ZwOpenFile = 32;
    ChangedReadWriteToReadAccess = 33;
    FirstAllowWriteCheckInProcess = 34;
    ReparsePointTarget = 35;
    ReparsePointTargetCached = 36;
    CreateSymbolicLinkSource = 37;
    MoveFileWithProgressSource = 38;
    MoveFileWithProgressDest = 39;
    MultipleOperations = 40;
    ProcessExit = 41;
    MacLookup = 42;
    MacReadlink = 43;
    MacVNodeCreate = 44;
    KAuthMoveSource = 45;
    KAuthMoveDest = 46;
    KAuthCreateHardlinkSource = 47;
    KAuthCreateHardlinkDest = 48;
    KAuthCopySource = 49;
    KAuthCopyDest = 50;
    KAuthDeleteDir = 51;
    KAuthDeleteFile = 52;
    KAuthOpenDir = 53;
    KAuthReadFile = 54;
    KAuthCreateDir = 55;
    KAuthWriteFile = 56;
    KAuthClose = 57;
    KAuthCloseModified = 58;
    KAuthGetAttributes = 59;
    KAuthVNodeExecute = 60;
    KAuthVNodeWrite = 61;
    KAuthVNodeRead = 62;
    KAuthVNodeProbe = 63;
    MacVNodeWrite = 64;
    MacVNodeCloneSource = 65;
    MacVNodeCloneDest = 66;
}